--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^1.0.6",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-sanity": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
