--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^1.0.6",
+    "@sanity/cli": "^3.1.4",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
     "next": "12.3.1",
@@ -22,9 +23,10 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^12.0.4",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
   }
