--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.20.12",
     "@portabletext/react": "^1.0.6",
     "@sanity/cli": "^3.1.4",
     "framer-motion": "^7.5.3",
