--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-sanity": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.55.0",
     "swr": "^1.3.0"
   },
