--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0",
+    "swiper": "^8.4.6",
     "swr": "^1.3.0"
   },
   "devDependencies": {
