--- a/admin/package.json
+++ b/admin/package.json
@@ -14,18 +14,15 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.34.0",
-    "@sanity/core": "^2.34.0",
-    "@sanity/default-layout": "^2.34.0",
-    "@sanity/default-login": "^2.34.0",
-    "@sanity/desk-tool": "^2.34.0",
     "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.34.0",
+    "@sanity/icons": "^2.2.2",
+    "@sanity/ui": "^1",
+    "@sanity/vision": "^3.5.1",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanity": "^3.5.1",
     "styled-components": "^5.2.0"
-  },
-  "devDependencies": {}
+  }
 }
