--- a/package.json
+++ b/package.json
@@ -4,33 +4,36 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "echo 'Building Sanity to public/admin' && cd admin && yarn && npx @sanity/cli build ../public/admin -y && echo 'Done'",
     "build": "next build",
     "start": "next start",
-    "sanity": "cd admin && sanity start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/eslint-config-studio": "^2.0.0",
+    "@sanity/icons": "^2.2.2",
+    "@sanity/ui": "^1",
     "@babel/core": "^7.20.12",
     "@portabletext/react": "^2.0.2",
-    "@sanity/cli": "^3.5.1",
-    "eslint-config-next": "^13.2.4",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.7.0",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
-    "next": "12.3.1",
-    "next-sanity": "^1.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.2.4",
+    "next-sanity": "^4.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
+    "sanity": "^3.7.0",
     "sass": "^1.55.0",
     "swiper": "^8.4.6",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "prop-types": "^15.7"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.12",
-    "eslint-config-next": "^13.2.4",
     "eslint": "8.36.0",
+    "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
   }
