--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/icons": "^2.2.2",
-    "@sanity/ui": "^1",
     "@babel/core": "^7.20.12",
     "@portabletext/react": "^2.0.2",
+    "@sanity/eslint-config-studio": "^2.0.0",
+    "@sanity/icons": "^2.2.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/ui": "^1",
     "@sanity/vision": "^3.7.0",
     "framer-motion": "^7.5.3",
     "moment": "^2.29.4",
     "next": "^13.2.4",
     "next-sanity": "^4.1.5",
+    "prop-types": "^15.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "sanity": "^3.7.0",
     "sass": "^1.55.0",
+    "styled-components": "^5.3.9",
     "swiper": "^8.4.6",
-    "swr": "^1.3.0",
-    "prop-types": "^15.7"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
