period page redesign

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^1",
     "@sanity/vision": "^3.7.0",
-    "framer-motion": "^7.5.3",
+    "@smakss/react-scroll-direction": "^1.0.5",
+    "framer-motion": "^10.12.4",
+    "gsap": "^3.11.5",
     "moment": "^2.29.4",
     "next": "^13.2.4",
     "next-sanity": "^4.1.5",
