--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-slick": "^0.29.0",
     "sanity": "^3.7.0",
     "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "swiper": "^8.4.6",
     "swr": "^1.3.0"
