revamped pinch to zoom

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.4",
     "next": "^13.2.4",
     "next-sanity": "^5.5.4",
+    "pinch-zoom-js": "^2.3.5",
     "prop-types": "^15.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
